--- a/web/assets/css/style.css
+++ b/web/assets/css/style.css
@@ -17,12 +17,20 @@ font {
 form {
     text-align: center;
 }
+
+#login-message {
+    color: white;
+    font-family:helvetica, sans-serif;
+    text-align: center;
+}
+
 .container {
     background-color: #333;
     padding:100px;
     margin: 55px auto;
     min-width: 500px;
     width: 500px;
+    text-align: center;
 }
 
 .input {
